Fix text-overflow

--- a/skins/larry/mail.css
+++ b/skins/larry/mail.css
@@ -1213,10 +1213,12 @@ div.message-partheaders .headers-table td.header {
 
 #messagepartheader table td {
 	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 #messagepartheader table td.title {
-	width: 60px;
+	width: 70px;
+	padding-right: 0:
 }
 
 
